--- a/portfolio.html
+++ b/portfolio.html
@@ -6,13 +6,95 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="stylesheet" href="style.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <nav class="navbar navbar-expand-lg navbar-light bg-white">
+                    <a class="navbar-brand" href="#">John Robinson</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="col-md-12"></div>
+                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="contact.html">Contact <span
+                                        class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="portfolio.html">Portfolio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="index.html">About</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </div>
+
+    <div class="container contact-form">
+        <h1>Portfolio</h1>
+        <hr>
+
+        <div class="row">
+            <div class="col-md-6">
+                <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+            </div>
+            <div class="col-md-6">
+                <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+            </div>
+            <div class="col-md-6">
+                <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+            </div>
+        </div>
+    </div>
+    <style>
+        body {
+            background-image: url();
+            background-size: cover;
+        }
+
+        hr {
+            background: white;
+        }
+
+        .contact-form {
+            background: rgba(0, 0, 0, .6);
+            color: white;
+            margin-top: 100px;
+            padding: 20px;
+            box-shadow: 0px 0px 10px 3px gray;
+        }
+    </style>
+
+
+
+    <footer>
+        <h2>© Copyright</h2>
+    </footer>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
