--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
     <style>
         body {
             background-image: url(./images/building.jpg);
-            should be 1400px but should be 2x as big background-size: cover;
+            background-size: cover;
         }
 
         /* img should be 1400px but should be 2x as big good sorce for pics is unsplash.com and photopea.com can help resize photos*/
