still need to fit background img

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="d-flex flex-grow-1">
             <span class="w-100 d-lg-none d-block">
                 <!-- hidden spacer to center brand on mobile --></span>
@@ -71,7 +71,7 @@
     </div>
     <style>
         body {
-            background-image: url();
+            background-image: url(./images/building2.jpg);
             background-size: cover;
         }
 
