--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="d-flex flex-grow-1">
             <span class="w-100 d-lg-none d-block">
                 <!-- hidden spacer to center brand on mobile --></span>
@@ -76,8 +76,11 @@
     </div>
     <style>
         body {
-            background-image: url();
-            background-size: cover;
+            background-image: url(./images/laptop.jpg);
+            /* background-size: cover; */
+            width: 100%;
+            height: 150px;
+            object-fit: fill;
         }
 
         hr {
