fixed background img

--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,10 @@
     <style>
         body {
             background-image: url(./images/building.jpg);
+            background-repeat: no-repeat;
             background-size: cover;
+            background-position: center center;
+            background-attachment: fixed;
         }
 
         /* img should be 1400px but should be 2x as big good sorce for pics is unsplash.com and photopea.com can help resize photos*/
