--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,10 @@
     <style>
         body {
             background-image: url(./images/building2.jpg);
+            background-repeat: no-repeat;
             background-size: cover;
+            background-position: center center;
+            background-attachment: fixed;
         }
 
         hr {
