--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
     <style>
         body {
             background-image: url(./images/laptop.jpg);
-            /* background-size: cover; */
-            width: 100%;
-            height: 150px;
-            object-fit: fill;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+            background-attachment: fixed;
         }
 
         hr {
