fixes made on profile imgs

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,25 +46,25 @@
         <hr>
 
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 image-wrapper">
                 <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
             </div>
-            <div class="col-md-6">
-                <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
-
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
-                <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
-            </div>
-            <div class="col-md-6">
+            <div class="col-md-6 image-wrapper">
                 <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
 
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 image-wrapper">
+                <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+            </div>
+            <div class="col-md-6 image-wrapper">
+                <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 image-wrapper">
                 <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
             </div>
         </div>
