--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                     <input type="text" class="form-control">
                 </div>
                 <div class="form-group">
-                    <label>Massage</label>
+                    <label>Message</label>
                     <textarea class="form-control" rows="7"></textarea>
                 </div>
                 <div class="form-group">
