--- a/index.html
+++ b/index.html
@@ -13,92 +13,76 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="d-flex flex-grow-1">
-            <span class="w-100 d-lg-none d-block">
-                <!-- hidden spacer to center brand on mobile --></span>
-            <h1 class="navbar-brand pl-5">John Robinson</h1>
-            <div class="w-100 text-right">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar7">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-        </div>
-        <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar7">
-            <ul class="navbar-nav ml-auto flex-nowrap pr-5">
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">About</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="container contact-form">
-        <h1>About Me</h1>
-        <hr>
-
-        <div class="row">
-
-            <div class="col-md-12">
-                <div>
-                    <img src="http://placehold.it/250x250" alt="Placeholder" class="img-thumbnail">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit quia explicabo quos natus omnis
-                        harum sed voluptatibus perspiciatis adipisci enim tempora dicta, quis asperiores sequi! Ex
-                        necessitatibus cum dolorum dolores. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Laboriosam consectetur libero rerum atque optio, at porro repellat vel repellendus, eveniet eius
-                        adipisci voluptatibus inventore ipsa tenetur quisquam dicta odio aspernatur. Lorem, ipsum dolor
-                        sit amet consectetur adipisicing elit. Reiciendis animi, quae dolor voluptatum eaque a nisi!
-                        Sapiente laudantium error nesciunt corrupti ex iure maiores? Quos sint eligendi doloremque
-                        excepturi cupiditate!</p>
-
-                </div>
-
-
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. A, voluptatum quo natus aliquam libero
-                        at dolorum sint? Sapiente ipsam ducimus voluptatem quae quam! Sint maxime officiis dolores harum
-                        iusto sequi!
-                    </p>
+    <div class="indexBody">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <div class="d-flex flex-grow-1">
+                <span class="w-100 d-lg-none d-block">
+                    <!-- hidden spacer to center brand on mobile --></span>
+                <h1 class="navbar-brand pl-5">John Robinson</h1>
+                <div class="w-100 text-right">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar7">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
                 </div>
             </div>
+            <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar7">
+                <ul class="navbar-nav ml-auto flex-nowrap pr-5">
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">About</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <div class="container contact-form">
+            <h1>About Me</h1>
+            <hr>
+
+            <div class="row">
+
+                <div class="col-md-12">
+                    <div>
+                        <img src="http://placehold.it/250x250" alt="Placeholder" class="img-thumbnail">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit quia explicabo quos natus omnis
+                            harum sed voluptatibus perspiciatis adipisci enim tempora dicta, quis asperiores sequi! Ex
+                            necessitatibus cum dolorum dolores. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Laboriosam consectetur libero rerum atque optio, at porro repellat vel repellendus, eveniet
+                            eius
+                            adipisci voluptatibus inventore ipsa tenetur quisquam dicta odio aspernatur. Lorem, ipsum
+                            dolor
+                            sit amet consectetur adipisicing elit. Reiciendis animi, quae dolor voluptatum eaque a nisi!
+                            Sapiente laudantium error nesciunt corrupti ex iure maiores? Quos sint eligendi doloremque
+                            excepturi cupiditate!</p>
+
+                    </div>
+
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. A, voluptatum quo natus aliquam
+                            libero
+                            at dolorum sint? Sapiente ipsam ducimus voluptatem quae quam! Sint maxime officiis dolores
+                            harum
+                            iusto sequi!
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
+        <footer>
+            <h2>© Copyright</h2>
+        </footer>
     </div>
-    <style>
-        body {
-            background-image: url(./images/laptop.jpg);
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center center;
-            background-attachment: fixed;
-        }
-
-        hr {
-            background: white;
-        }
-
-        .contact-form {
-            background: rgba(0, 0, 0, .6);
-            color: white;
-            margin-top: 100px;
-            padding: 20px;
-            box-shadow: 0px 0px 10px 3px gray;
-        }
-    </style>
-
-    <footer>
-        <h2>© Copyright</h2>
-    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
