--- a/portfolio.html
+++ b/portfolio.html
@@ -14,89 +14,66 @@
 </head>
 
 <body>
+    <div class="portfolioBody">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <div class="d-flex flex-grow-1">
+                <span class="w-100 d-lg-none d-block">
+                    <!-- hidden spacer to center brand on mobile --></span>
+                <h1 class="navbar-brand pl-5">John Robinson</h1>
+                <div class="w-100 text-right">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar7">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+            </div>
+            <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar7">
+                <ul class="navbar-nav ml-auto flex-nowrap pr-5">
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">About</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="d-flex flex-grow-1">
-            <span class="w-100 d-lg-none d-block">
-                <!-- hidden spacer to center brand on mobile --></span>
-            <h1 class="navbar-brand pl-5">John Robinson</h1>
-            <div class="w-100 text-right">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar7">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+        <div class="container contact-form">
+            <h1>Portfolio</h1>
+            <hr>
+
+            <div class="row">
+                <div class="col-md-6 image-wrapper">
+                    <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+                </div>
+                <div class="col-md-6 image-wrapper">
+                    <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 image-wrapper">
+                    <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+                </div>
+                <div class="col-md-6 image-wrapper">
+                    <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 image-wrapper">
+                    <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+                </div>
             </div>
         </div>
-        <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar7">
-            <ul class="navbar-nav ml-auto flex-nowrap pr-5">
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">About</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
 
-    <div class="container contact-form">
-        <h1>Portfolio</h1>
-        <hr>
-
-        <div class="row">
-            <div class="col-md-6 image-wrapper">
-                <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
-            </div>
-            <div class="col-md-6 image-wrapper">
-                <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
-
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 image-wrapper">
-                <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
-            </div>
-            <div class="col-md-6 image-wrapper">
-                <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
-
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 image-wrapper">
-                <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
-            </div>
-        </div>
+        <footer>
+            <h2>© Copyright</h2>
+        </footer>
     </div>
-    <style>
-        body {
-            background-image: url(./images/building2.jpg);
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center center;
-            background-attachment: fixed;
-        }
-
-        hr {
-            background: white;
-        }
-
-        .contact-form {
-            background: rgba(0, 0, 0, .6);
-            color: white;
-            margin-top: 100px;
-            padding: 20px;
-            box-shadow: 0px 0px 10px 3px gray;
-        }
-    </style>
-
-
-
-    <footer>
-        <h2>© Copyright</h2>
-    </footer>
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
