--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
 </head>
 
 <body>
     <div class="contactBody">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-muted">
             <div class="d-flex flex-grow-1">
                 <span class="w-100 d-lg-none d-block">
                     <!-- hidden spacer to center brand on mobile --></span>
@@ -46,9 +48,10 @@
 
             <div class="row">
                 <div class="col-md-6">
-                    <address>123 fake street slc ut</address>
-                    <p>Email: notfake@isfake.com</p>
-                    <p>Phone: 801-896-3958</p>
+                    <p>John Robinson</p>
+                    <address>Salt Lake City, Utah</address>
+                    <p>Email: johnarobinson133@gmail.com</p>
+                    <!-- <p>Phone: 801-896-3958</p> -->
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
@@ -71,8 +74,17 @@
                 </div>
             </div>
         </div>
-        <footer>
-            <h2>© Copyright</h2>
+       
+        <footer id="main-footer">
+            <div id="footer-bottom">
+                <div id="footer-info" class ="text-light">Copyright © 2020 | John Robinson | johnarobinson133@gmail.com | <a href="https://www.linkedin.com/in/john-robinson-966329b8/" target="_blank"
+                    rel="noopener noreferrer">
+                    <i class="fab fa-linkedin fa-2x"></i>
+                </a> <a href="https://github.com/jrobi133">
+                    <i class="fab fa-github fa-2x"></i>
+                </a>
+                </div>
+            </div><!-- #footer-bottom -->
         </footer>
     </div>
     <!-- Optional JavaScript -->
