--- a/portfolio.html
+++ b/portfolio.html
@@ -11,11 +11,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
 </head>
 
 <body>
     <div class="portfolioBody">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-muted">
             <div class="d-flex flex-grow-1">
                 <span class="w-100 d-lg-none d-block">
                     <!-- hidden spacer to center brand on mobile --></span>
@@ -46,20 +48,21 @@
             <hr>
 
             <div class="row">
-                <div class="col-md-6 image-wrapper">
-                    <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+                
+                <div class="col-md-6 image-wrapper"><h5>Big Brain Trivia</h5> <a href="https://heavensregent.github.io/project1/">
+                    <img src="./images/newnewCapture.JPG" alt="Placeholder" class="img-thumbnail"></a>
                 </div>
-                <div class="col-md-6 image-wrapper">
-                    <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+                <div class="col-md-6 image-wrapper"><h5>Weather Dashboard</h5> <a href="https://jrobi133.github.io/John-Robinson-Weather-Dashboard/">
+                    <img src="./images/weatherDashboard.JPG" alt="Placeholder" class="img-thumbnail"></a>
 
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 image-wrapper">
-                    <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+                <div class="col-md-6 image-wrapper"><h5>Password Generator</h5> <a href="https://jrobi133.github.io/John-Robinson-Password-Generator/">
+                    <img src="./images/passwordGenerator.JPG" alt="Placeholder" class="img-thumbnail"></a>
                 </div>
-                <div class="col-md-6 image-wrapper">
-                    <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+                <div class="col-md-6 image-wrapper"><h5>Coding Quiz Challenge</h5> <a href="https://jrobi133.github.io/John-Robinson-Weather-Dashboard/">
+                    <img src="./images/codingQuizChallenge.JPG" alt="Placeholder" class="img-thumbnail"></a>
 
                 </div>
             </div>
@@ -70,8 +73,16 @@
             </div>
         </div>
 
-        <footer>
-            <h2>© Copyright</h2>
+        <footer id="main-footer">
+            <div id="footer-bottom">
+                <div id="footer-info" class ="text-light">Copyright © 2020 | John Robinson | johnarobinson133@gmail.com | <a href="https://www.linkedin.com/in/john-robinson-966329b8/" target="_blank"
+                    rel="noopener noreferrer">
+                    <i class="fab fa-linkedin fa-2x"></i>
+                </a> <a href="https://github.com/jrobi133">
+                    <i class="fab fa-github fa-2x"></i>
+                </a>
+                </div>
+            </div>
         </footer>
     </div>
 
