added images and setting up folders better

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
 </head>
@@ -50,7 +50,7 @@
 
                 <div class="col-md-12">
                     <div>
-                        <img src="http://placehold.it/250x250" alt="Placeholder" class="img-thumbnail">
+                        <img src="./images/me1.jpg" alt="Placeholder" class="img-thumbnail">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit quia explicabo quos natus omnis
                             harum sed voluptatibus perspiciatis adipisci enim tempora dicta, quis asperiores sequi! Ex
                             necessitatibus cum dolorum dolores. Lorem ipsum dolor sit amet consectetur adipisicing elit.
