added info to about me page

--- a/index.html
+++ b/index.html
@@ -50,18 +50,10 @@
 
                 <div class="col-md-12">
                     <div>
-                        <img src="./images/me1.jpg" alt="Placeholder" class="img-thumbnail">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit quia explicabo quos natus omnis
-                            harum sed voluptatibus perspiciatis adipisci enim tempora dicta, quis asperiores sequi! Ex
-                            necessitatibus cum dolorum dolores. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Laboriosam consectetur libero rerum atque optio, at porro repellat vel repellendus, eveniet
-                            eius
-                            adipisci voluptatibus inventore ipsa tenetur quisquam dicta odio aspernatur. Lorem, ipsum
-                            dolor
-                            sit amet consectetur adipisicing elit. Reiciendis animi, quae dolor voluptatum eaque a nisi!
-                            Sapiente laudantium error nesciunt corrupti ex iure maiores? Quos sint eligendi doloremque
-                            excepturi cupiditate!</p>
-
+                        <img src="./images/me1.jpg" alt="Placeholder" class="imgMe">
+                        <p>Born and raised here in Salt Lake City Utah  in the 1900 to 2000 I have watched how much this city has changed and adapted to the new technologies that has changed this world in a better way. From when I was about 8 years old my curiosity for computers grew more and more. To taking my first html class in 7th grade and learning about html I started to see how powerful this industry is, and to today we never could have guessed all the amazing things this can do and seeing that the sky’s the limit. There is always something that could be made to make life just a little better. </p>
+                        <p>My passion as a full stack web developer is seeing the possibilities and opportunities that can change how we do things every day and bringing our communities closer and to hopefully making a better place for the next generation. </p>
+                        <p>Growing up here in Salt Lake City I have grown to love my community and the great opportunities that we have here. Although we could always do better, I see us as a community on a good path, and a good place to call home. </p>              
                     </div>
 
 
@@ -70,13 +62,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. A, voluptatum quo natus aliquam
-                            libero
-                            at dolorum sint? Sapiente ipsam ducimus voluptatem quae quam! Sint maxime officiis dolores
-                            harum
-                            iusto sequi!
-                        </p>
+                        <p>In conclusion I would like to say thank you for looking over this. This is one of the the greatest industry to be in and let’s make a change. Thank you.</p>
                     </div>
                 </div>
             </div>
