took out empty placehold img in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,11 +66,11 @@
 
                 </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-md-6 image-wrapper">
                     <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <footer id="main-footer">
