--- a/portfolio.html
+++ b/portfolio.html
@@ -49,21 +49,28 @@
 
             <div class="row">
                 
-                <div class="col-md-6 image-wrapper"><h5>Big Brain Trivia</h5> <a href="https://heavensregent.github.io/project1/">
-                    <img src="./images/newnewCapture.JPG" alt="Placeholder" class="img-thumbnail"></a>
+                <div class="col-md-6 image-wrapper"><h5>Reserve A Room</h5> <a href="https://reserve-a-room.herokuapp.com/">
+                    <img src="./images/reserveARoom.PNG" alt="Placeholder" class="img-thumbnail"></a>
                 </div>
-                <div class="col-md-6 image-wrapper"><h5>Weather Dashboard</h5> <a href="https://jrobi133.github.io/John-Robinson-Weather-Dashboard/">
-                    <img src="./images/weatherDashboard.JPG" alt="Placeholder" class="img-thumbnail"></a>
+                <div class="col-md-6 image-wrapper"><h5>E-Commerce Back End (ORM)</h5> <a href="https://github.com/jrobi133/John-Robinson-E-Commerce-Back-End">
+                    <img src="./images/ECommerceBackEnd.PNG" alt="Placeholder" class="img-thumbnail"></a>
 
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 image-wrapper"><h5>Employee Tracker</h5> <a href="https://github.com/jrobi133/John-Robinson-Employee-Tracker">
+                    <img src="./images/employeeTracker.PNG" alt="Placeholder" class="img-thumbnail"></a>
+                </div>
+                <div class="col-md-6 image-wrapper"><h5>Note Taker</h5> <a href="https://pacific-plains-75638.herokuapp.com/notes">
+                    <img src="./images/noteTaker.PNG" alt="Placeholder" class="img-thumbnail"></a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 image-wrapper"><h5>Password Generator</h5> <a href="https://jrobi133.github.io/John-Robinson-Password-Generator/">
                     <img src="./images/passwordGenerator.JPG" alt="Placeholder" class="img-thumbnail"></a>
                 </div>
-                <div class="col-md-6 image-wrapper"><h5>Coding Quiz Challenge</h5> <a href="https://jrobi133.github.io/John-Robinson-Coding-Quiz-Challenge/">
-                    <img src="./images/codingQuizChallenge.JPG" alt="Placeholder" class="img-thumbnail"></a>
-
+                <div class="col-md-6 image-wrapper"><h5>Big Brain Trivia</h5> <a href="https://heavensregent.github.io/project1/">
+                    <img src="./images/newnewCapture.JPG" alt="Placeholder" class="img-thumbnail"></a>
                 </div>
             </div>
             <!-- <div class="row">
